2001-12-19  Jim Blandy  <jimb@redhat.com>

	* s390-tdep.c (s390_register_raw_size): Replace unnecessarily
	obscure range comparison with legible equivalent.

Wed Dec 19 12:18:57 2001  Jeffrey A Law  (law@redhat.com)

	* config/pa/tm-hppa.h (STORE_RETURN_VALUE): Use hppa_store_return_value.
	(EXTRACT_RETURN_VALUE): Similarly.
	* hppa-tdep.c (hppa_store_return_value): New function.
	(hppa_extract_return_value): New function.

	* infttrace.c (child_acknowledge_created_inferior): Pass
	correct argument to add_thread.
	(update_thread_state_after_attach): Likewise.

2001-12-19  Fernando Nasser  <fnasser@redhat.com>

	* config/arm/tm-arm.h: Properly define SOFTWARE_SINGLE_STEP_P.
	Always define SOFTWARE_SINGLE_STEP.
	* config/arm/tm-embed.h: Properly define SOFTWARE_SINGLE_STEP_P.
	* arm-tdep.c (arm_get_next_pc, thumb_get_next_pc, bitcount,
	shifted_reg_val): Always compile these functions.
	(arm_software_single_step): Fix second argument in function calls.

2001-12-19  Andrew Cagney  <ac131313@redhat.com>

	* arch-utils.h (gdbarch_info_init): Declare.
	* arch-utils.c: Include "arch-utils.h".
	(gdbarch_info_init): Define.
	(set_endian, set_architecture, set_gdbarch_from_file)
	(initialize_current_architecture): Use gdbarch_info_init.
	* rs6000-nat.c (set_host_arch): Ditto.
	* cris-tdep.c	(cris_version_update, cris_mode_update)
	(cris_abi_update): Ditto.

2001-12-19  Jim Blandy  <jimb@redhat.com>

	* c-lang.c (c_emit_char): Print ASCII 11 as '\v', to match
	ISO C, and our parser.  Print ASCII 0 as '\0', since that's what
	people are used to seeing.

2001-12-18  Jim Blandy  <jimb@redhat.com>

	* c-lang.c (c_printstr, c_builtin_types, cplus_builtin_types): 
	Fix indentation.

	* Makefile.in (c-exp.tab.o): Delete duplicate build rule.  Fix
 	dependency list on remaining build rule.

2001-12-18  Martin M. Hunt  <hunt@redhat.com>

	* ser-tcp.c (tcp_open): Disable Nagle algorithm which
	improves performance in some cases.

2001-12-17  Ben Harris  <bjh21@netbsd.org>
